# currency-exchanger

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: linters.yml
alembic/: env.py
alembic/versions/: 2024_02_23_1835-71750f3ce648_initial.py
src/: app.py  scheduler.py  settings.py
src/api/: router.py
src/api/v1/endpoints/: rates.py
src/api/v1/schemas/: rates.py
src/core/: exceptions.py
src/db/: base.py  dependencies.py  session.py
src/db/models/: __init__.py  currency.py  task.py
src/repositories/: currency.py
src/services/: currency.py  rate_provider.py
